log
Thu Mar 17 20:03:40 UTC 2022: 
 list.c | 23 ++++++++++++++++++++---
 1 file changed, 20 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
8124c81
Sun Mar 20 23:28:03 UTC 2022: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 15/70
e759318
Sun Mar 20 23:32:52 UTC 2022: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
46d2d4a
Sun Mar 20 23:34:47 UTC 2022: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
a1ba3f5
Sun Mar 20 23:37:32 UTC 2022: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  9|3
total_score: 35/70
f142474
Sun Mar 20 23:51:59 UTC 2022: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
55ffe93
Sun Mar 20 23:52:59 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
16dfb0d
Sun Mar 20 23:55:59 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f8add23
Sun Mar 20 23:57:26 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a3aa987
Sun Mar 20 23:58:55 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
175ca96
Mon Mar 21 00:06:31 UTC 2022: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘pushFront’:
list.c:86:3: error: ‘nuevo’ undeclared (first use in this function)
   nuevo = createNode (data);
   ^~~~~
list.c:86:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
fd571ff
Mon Mar 21 00:07:15 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
74d1d84
Mon Mar 21 00:08:08 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fc0811c
Mon Mar 21 00:10:20 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8b077a2
Mon Mar 21 00:10:36 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5c3779f
Mon Mar 21 00:12:09 UTC 2022: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
638cfaf
Mon Mar 21 00:13:23 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
6aa6309
Mon Mar 21 00:14:36 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
dfc01e4
Mon Mar 21 00:15:26 UTC 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
ece54d1
Mon Mar 21 00:16:54 UTC 2022: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
3a05dad
Mon Mar 21 00:18:11 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
02cf25a
Mon Mar 21 00:21:20 UTC 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘pushFront’:
list.c:92:14: error: ‘return’ with a value, in function returning void [-Werror]
   return list->head;
          ~~~~^~~~~~
list.c:84:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7291e64
Mon Mar 21 00:22:20 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘pushFront’:
list.c:94:14: error: ‘return’ with a value, in function returning void [-Werror]
   return list->current;
          ~~~~^~~~~~~~~
list.c:84:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6178b66
Mon Mar 21 00:22:31 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘pushFront’:
list.c:94:23: error: ‘return’ with a value, in function returning void [-Werror]
   return list->current->data;
          ~~~~~~~~~~~~~^~~~~~
list.c:84:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
11b680b
Mon Mar 21 00:32:06 UTC 2022: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  9|3
total_score: 35/70
ba7d958
Mon Mar 21 00:35:34 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cc62a71
Mon Mar 21 00:40:00 UTC 2022: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  9|3
total_score: 35/70
5f1b2d6
Mon Mar 21 00:43:09 UTC 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
5ebe75b
